// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View basic 1`] = `
<View
  bg="white"
  borderColor="black"
  borderStyle="solid"
  borderWidth={1}
  height={100}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 100,
        "width": 200,
      },
      undefined,
    ]
  }
  testID="my-view"
  width={200}
>
   
</View>
`;

exports[`View color 1`] = `
<View
  bg="#FECF28"
  borderColor="black"
  borderStyle="solid"
  borderWidth={1}
  height={100}
  style={
    Array [
      Object {
        "backgroundColor": "#FECF28",
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 100,
        "width": 200,
      },
      undefined,
    ]
  }
  testID="my-view"
  width={200}
>
   
</View>
`;

exports[`View onPress 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="my-view"
>
   
</View>
`;

exports[`View rounded 1`] = `
<View
  bg="white"
  borderColor="black"
  borderRadius={8}
  borderStyle="solid"
  borderWidth={1}
  height={100}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderColor": "black",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 100,
        "width": 200,
      },
      undefined,
    ]
  }
  testID="my-view"
  width={200}
>
   
</View>
`;

exports[`View shadow 1`] = `
<View
  bg="white"
  elevation={8}
  height={100}
  shadowColor="black"
  shadowOffset={
    Object {
      "height": 8,
      "width": 4,
    }
  }
  shadowOpacity={0.5}
  shadowRadius={8}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "height": 100,
        "width": 200,
      },
      undefined,
    ]
  }
  testID="my-view"
  width={200}
>
   
</View>
`;
